package io.github.soundremote.util

object TestTag {
    const val FAVOURITE_SWITCH = "favourite_switch"
    const val NAVIGATION_MENU = "navigation_menu"
    const val INPUT_FIELD = "input_field"
}
